# czar-sinm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  env.example  example.py  pyproject.toml
.github/workflows/: ci.yml  integration.yml  racional.yml  release.yml  validar-acessos.yml
exemplos/: README.md  env.example
exemplos/01_dados_auto_contidos/: README.md  exemplo.py
exemplos/02_dados_externos/: README.md  exemplo.py
exemplos/02_dados_externos/dados/processo_001/: listarSensoriamentosRemotos.json  resultado.csv
exemplos/02_dados_externos/dados/processo_001/analise_solo/: amostras_fisicas.csv  amostras_quimicas.csv  amostras_solo.csv  analise_solo.csv
exemplos/02_dados_externos/dados/processo_001/sensoriamento_remoto/: indices_sensoriamento_remoto.csv  interpretacao_cobertura_solo.csv  interpretacao_cultura.csv  interpretacao_manejo.csv  sensoriamento_remoto.csv
exemplos/02_dados_externos/dados/processo_001/talhao/: coberturas_solo.csv  producoes.csv  produtor.csv  propriedade.csv  talhao.csv
exemplos/03_validar_acessos/: README.md  env.example  exemplo.py
exemplos/04_interativo/: README.md  exemplo.py
exemplos/05_racional/: README.md  exemplo.py
exemplos/06_racional_por_codigo/: README.md  exemplo.py
exemplos/dados_auto_contidos/: README.md  example.py
exemplos/dados_externos/: README.md  example.py
exemplos/dados_externos/dados/processo_001/sensoriamento_remoto/: indices_sensoriamento_remoto.csv
exemplos/dados_externos/dados/processo_001/talhao/: manejos.csv  talhao.csv
src/czarnm/: __init__.py  auth.py  client.py  exceptions.py
src/czarsinm/: __init__.py  acoes_sugeridas.csv  auth.py  client.py  exceptions.py  models.py
tests/: conftest.py  test_auth.py  test_client.py  test_exceptions.py  test_integracao_local.py  test_models.py
zarcnm/: __init__.py  client.py  exceptions.py  models.py
