[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "czarnm"
version = "0.1.0"
description = "Czarnm — Cliente Python para a API ZARC Nível de Manejo (ZARC-NM / Embrapa)"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "CoutureTec", email = "contato@couturetec.com.br"},
]
dependencies = [
    "requests>=2.28",
    "python-dotenv>=0.19",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "responses",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["czarnm*"]
