[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "czarnm"
version = "0.1.0"
description = "Czarnm — Cliente Python para a API ZARC Nível de Manejo (ZARC-NM / Embrapa)"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "CoutureTec", email = "contato@couturetec.com.br"},
]
dependencies = [
    "requests>=2.28",
    "python-dotenv>=0.19",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "responses",
]

[project.urls]
Homepage = "https://github.com/CoutureTec/czar-nm"
Repository = "https://github.com/CoutureTec/czar-nm"
Issues = "https://github.com/CoutureTec/czar-nm/issues"
Changelog = "https://github.com/CoutureTec/czar-nm/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["czarnm"]

[tool.coverage.report]
show_missing = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["czarnm*"]
