[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "czar-sinm"
version = "0.1.1"
description = "Cliente Python para a API SINM Nível de Manejo (SINM / Embrapa)"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "CoutureTec", email = "contato@couturetec.com.br"},
]
keywords = ["zarc", "zarcnm", "sinm", "embrapa", "agro", "nível de manejo", "api", "client"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "requests>=2.28",
    "python-dotenv>=0.19",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "responses",
]

[project.urls]
Homepage = "https://github.com/CoutureTec/czar-sinm"
Repository = "https://github.com/CoutureTec/czar-sinm"
Issues = "https://github.com/CoutureTec/czar-sinm/issues"
Changelog = "https://github.com/CoutureTec/czar-sinm/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["czarsinm"]

[tool.coverage.report]
show_missing = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["czarsinm*"]
